# sergeys-direct-democracy-bot-tg

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  vote.py
commands/: artemalanov.py  changeIcon.py  changeName.py  createGrup.py  gofuckyourself.py  help.py  invite.py  jail.py  kick.py  makeAdmin.py  maslenko.py  removeAdmin.py  secret.py  start.py
